docker file fixes